# supabase-scoped-clients

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  02_native_client_comparison.py  03_async_usage.py  04_builder_pattern.py  README.md  example.py
src/supabase_scoped_clients/: __init__.py  async_builder.py  async_factory.py  async_scoped_client.py  builder.py  config.py  factory.py  jwt.py  scoped_client.py
src/supabase_scoped_clients/builders/: __init__.py  async_builder.py  sync.py
src/supabase_scoped_clients/clients/: __init__.py  async_client.py  sync.py
src/supabase_scoped_clients/core/: __init__.py  config.py  exceptions.py  token.py
src/supabase_scoped_clients/factories/: __init__.py  async_factory.py  sync.py
src/supabase_scoped_clients/infrastructure/: __init__.py  proxy.py
supabase/: config.toml
supabase/migrations/: 20260116000000_test_rls.sql  20260116100000_examples_tables.sql
tests/: conftest.py  test_async_builder.py  test_async_factory.py  test_async_scoped_client.py  test_builder.py  test_config.py  test_exceptions.py  test_factory.py  test_jwt.py  test_proxy.py  test_scoped_client.py  test_token.py
